tests/cases/modules/ok/file-module-alias-main.ari
mod module_file_source as Imported;

fn main() -> i64 {
  return Imported::value();
}
