tests/cases/modules/errors/module-private-reexport.ari
mod Core {
  pub fn value() -> i64 {
    return 1;
  }
}

mod Api {
  use Core::value as answer
}

fn main() -> i64 {
  return Api::answer();
}
